added the html checkboxes for characters

--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@
                             </select>
 
                             <!-- Add in the checkboxes -->
+
+                    <fieldset>
+                        <legend>Which characters would you like to see more of? (select all that apply)</legend>
+                        <label for="">
+                            <input  type="checkbox" name="yuji_itadori" id="yuji_itadori" value="yuji_itadori"> <label for="yuji_itadori">Yuji Itadori</label>
+                            <input  type="checkbox" name="megumi_fushiguro" id="megumi_fushiguro" value="megumi_fushiguro"> <label for="megumi_fushiguro">Megumi Fushiguro</label>
+                            <input  type="checkbox" name="nobara_kugisaki" id="nobara_kugisaki" value="nobara_kugisaki"> <label for="nobara_kugisaki">Nobara Kugisaki</label>
+                            <input  type="checkbox" name="satoru_gojo" id="satoru_gojo" value="satoru_gojo"> <label for="satoru_gojo">Satoru Gojo</label>
+                            <input  type="checkbox" name="panda" id="panda" value="panda"> <label for="panda">Panda</label>
+                            <input  type="checkbox" name="toge_inumaki" id="toge_inumaki" value="toge_inumaki"> <label for="toge_inumaki">Toge Inumaki</label>
+                            <input  type="checkbox" name="maki_zenin" id="maki_zenin" value="maki_zenin"> <label for="maki_zenin">Maki Zenin</label> 
+                            <input  type="checkbox" name="kento_nanami" id="kento_nanami" value="kento_nanami"> <label for="kento_nanami">Kento Nanami</label> 
+                            <input  type="checkbox" name="ryomen_sukuna" id="ryomen_sukuna" value="ryomen_sukuna"> <label for="ryomen_sukuna">Ryomen Sukuna</label> 
+                            <input  type="checkbox" name="junpei_yoshino" id="junpei_yoshino" value="junpei_yoshino"> <label for="junpei_yoshino">Junpei Yoshino</label>
+                        </label>
+                    </fieldset>
                            
                         </label>
                     </fieldset>
