base html functionality completed

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                     <fieldset>
                         <legend>Which characters would you like to see more of? (select all that apply)</legend>
-                        <label for="">
+                        <label for="characters-checkboxes">
                             <input  type="checkbox" name="yuji_itadori" id="yuji_itadori" value="yuji_itadori"> <label for="yuji_itadori">Yuji Itadori</label>
                             <input  type="checkbox" name="megumi_fushiguro" id="megumi_fushiguro" value="megumi_fushiguro"> <label for="megumi_fushiguro">Megumi Fushiguro</label>
                             <input  type="checkbox" name="nobara_kugisaki" id="nobara_kugisaki" value="nobara_kugisaki"> <label for="nobara_kugisaki">Nobara Kugisaki</label>
@@ -111,7 +111,19 @@
                             <input  type="checkbox" name="junpei_yoshino" id="junpei_yoshino" value="junpei_yoshino"> <label for="junpei_yoshino">Junpei Yoshino</label>
                         </label>
                     </fieldset>
-                           
+                    
+                            <!-- Add in the text area -->
+                    <fieldset>
+                        <legend>Any comments or suggestions?</legend>
+                        <label for="comments-suggestions">
+                            <textarea name="" id="" cols="40" rows="10"></textarea>
+                        </label>
+                    </fieldset>
+
+                            <!-- Add in the submit -->
+                            <fieldset>
+                                <button type="submit">Submit</button>
+                            </fieldset>    
                         </label>
                     </fieldset>
 
