--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <head>
         <title>Jujutsu Kaisen Survey</title>
+        <link rel="stylesheet" href="styles.css">
     </head>    
     <body>
         <main>
