added the japanese names for the character list

--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
                     <fieldset>
                         <legend>Which characters would you like to see more of? (select all that apply)</legend>
                         <label for="characters-checkboxes">
-                            <input  type="checkbox" name="yuji_itadori" id="yuji_itadori" value="yuji_itadori"> <label for="yuji_itadori">Yuji Itadori</label>
-                            <input  type="checkbox" name="megumi_fushiguro" id="megumi_fushiguro" value="megumi_fushiguro"> <label for="megumi_fushiguro">Megumi Fushiguro</label>
-                            <input  type="checkbox" name="nobara_kugisaki" id="nobara_kugisaki" value="nobara_kugisaki"> <label for="nobara_kugisaki">Nobara Kugisaki</label>
-                            <input  type="checkbox" name="satoru_gojo" id="satoru_gojo" value="satoru_gojo"> <label for="satoru_gojo">Satoru Gojo</label>
-                            <input  type="checkbox" name="panda" id="panda" value="panda"> <label for="panda">Panda</label>
-                            <input  type="checkbox" name="toge_inumaki" id="toge_inumaki" value="toge_inumaki"> <label for="toge_inumaki">Toge Inumaki</label>
-                            <input  type="checkbox" name="maki_zenin" id="maki_zenin" value="maki_zenin"> <label for="maki_zenin">Maki Zenin</label> 
-                            <input  type="checkbox" name="kento_nanami" id="kento_nanami" value="kento_nanami"> <label for="kento_nanami">Kento Nanami</label> 
-                            <input  type="checkbox" name="ryomen_sukuna" id="ryomen_sukuna" value="ryomen_sukuna"> <label for="ryomen_sukuna">Ryomen Sukuna</label> 
-                            <input  type="checkbox" name="junpei_yoshino" id="junpei_yoshino" value="junpei_yoshino"> <label for="junpei_yoshino">Junpei Yoshino</label>
+                            <input  type="checkbox" name="yuji_itadori" id="yuji_itadori" value="yuji_itadori"> <label for="yuji_itadori">Yuji Itadori ( 虎杖 悠仁 )</label>
+                            <input  type="checkbox" name="megumi_fushiguro" id="megumi_fushiguro" value="megumi_fushiguro"> <label for="megumi_fushiguro">Megumi Fushiguro ( 伏黒 恵 )</label>
+                            <input  type="checkbox" name="nobara_kugisaki" id="nobara_kugisaki" value="nobara_kugisaki"> <label for="nobara_kugisaki">Nobara Kugisaki ( 釘崎 野薔薇 )</label>
+                            <input  type="checkbox" name="satoru_gojo" id="satoru_gojo" value="satoru_gojo"> <label for="satoru_gojo">Satoru Gojo ( 五条 悟 )</label>
+                            <input  type="checkbox" name="panda" id="panda" value="panda"> <label for="panda">Panda (パンダ)</label>
+                            <input  type="checkbox" name="toge_inumaki" id="toge_inumaki" value="toge_inumaki"> <label for="toge_inumaki">Toge Inumaki ( 狗巻 棘 )</label>
+                            <input  type="checkbox" name="maki_zenin" id="maki_zenin" value="maki_zenin"> <label for="maki_zenin">Maki Zenin ( 禪院 真希 )</label> 
+                            <input  type="checkbox" name="kento_nanami" id="kento_nanami" value="kento_nanami"> <label for="kento_nanami">Kento Nanami ( 七海 建人 )</label> 
+                            <input  type="checkbox" name="ryomen_sukuna" id="ryomen_sukuna" value="ryomen_sukuna"> <label for="ryomen_sukuna">Ryomen Sukuna ( 両面宿儺 )</label> 
+                            <input  type="checkbox" name="junpei_yoshino" id="junpei_yoshino" value="junpei_yoshino"> <label for="junpei_yoshino">Junpei Yoshino ( 吉野 純平 )</label>
                         </label>
                     </fieldset>
                     
