in progress styling to center all elements on page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>Jujutsu Kaisen Survey</h1>
             <h2>* Spoiler Free *</h2>
         
-            <section>
+            <section id="form-section">
                 <form action="">
 
                     <fieldset>
