ready for final steps including radio questions html, css image, and general styling

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <h2>* Spoiler Free *</h2>
         
             <section id="form-section">
+                <!--NEEDS action, radio questions, and background image for main body-->
                 <form action="">
 
                     <fieldset>
