--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <head>
         <title>Jujutsu Kaisen Survey</title>
         <link rel="stylesheet" href="styles.css">
-    </head>    
+    </head>   
+     
     <body>
         <main>
             <h1>Jujutsu Kaisen Survey</h1>
@@ -158,7 +159,8 @@
                             <!-- Add in the submit -->
                             <fieldset>
                                 <button type="submit">Submit</button>
-                            </fieldset>    
+                            </fieldset>
+                            <p>Photo by Jase Bloor on Unsplash</p>    
                         </label>
                     </fieldset>
 
